added a navbar on scroll

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">    
 <link rel="stylesheet" href="css/style.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <style>
   body, html {
     height: 100%;
@@ -70,6 +71,9 @@
   </head>
   <body>
     
+    <div class="banner">banner</div>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus animi expedita dignissimos commodi, excepturi, saepe voluptates officiis nesciunt aliquam doloremque sequi? Consectetur nisi sapiente blanditiis voluptatibus corporis voluptates vero tenetur.</p>
+
 <header>
   <video autoplay muted loop id="myVideo">
   <source src="video/cows.mp4" type="video/mp4">
@@ -138,5 +142,6 @@
       }
     }
     </script>
+    <script src="js/script.js"></script>
 </body>
 </html>
