--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <span class="border">SCROLL DOWN</span>
       </div>
     </div>
-    
+
     <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
       <h3 style="text-align:center;">Parallax Demo</h3>
       <p>Parallax scrolling is a web site trend where the background content is moved at a different speed than the foreground content while scrolling. Nascetur per nec posuere turpis, lectus nec libero turpis nunc at, sed posuere mollis ullamcorper libero ante lectus, blandit pellentesque a, magna turpis est sapien duis blandit dignissim. Viverra interdum mi magna mi, morbi sociis. Condimentum dui ipsum consequat morbi, curabitur aliquam pede, nullam vitae eu placerat eget et vehicula. Varius quisque non molestie dolor, nunc nisl dapibus vestibulum at, sodales tincidunt mauris ullamcorper, dapibus pulvinar, in in neque risus odio. Accumsan fringilla vulputate at quibusdam sociis eleifend, aenean maecenas vulputate, non id vehicula lorem mattis, ratione interdum sociis ornare. Suscipit proin magna cras vel, non sit platea sit, maecenas ante augue etiam maecenas, porta porttitor placerat leo.</p>
@@ -114,6 +114,48 @@
       <div class="caption">
       <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">SCROLL UP</span>
       </div>
+      <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 offset-sm-6 p-5">
+                    <h3>Contact Us</h2>
+                    <p class="small">
+                        Vestibulum venernatis id ex eu dapibus. Suspendisse sit amet justa leo. Curabitur ornare tacus erat, ac interdum liguta consequat ut. Fusce id tellus ac ante feugiat porta.
+                    </p>
+                    <div class="row text-success my-3">
+                        <div class="col">
+                            <i class="fa fa-phone fa-fw"></i> +1234567890
+                        </div>
+                        <div class="col">
+                            <i class="fa fa-email fa-fw"></i> ABC@ABC.COM
+                        </div>
+                    </div>
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group col-sm-6">
+                                <input type="text" class="form-control" placeholder="First Name" />
+                            </div>
+                            <div class="form-group col-sm-6">
+                                <input type="text" class="form-control" placeholder="Last Name" />
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-sm-6">
+                                <input type="text" class="form-control" placeholder="Email" />
+                            </div>
+                            <div class="form-group col-sm-6">
+                                <input type="text" class="form-control" placeholder="Cell" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <textarea class="form-control" rows="5" placeholder="Message"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-success">Send</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
     </div>
     
     <div style="position:relative;">
