added split page and uploaded images

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">    
 <link rel="stylesheet" href="css/style.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <style>
   body, html {
     height: 100%;
@@ -87,6 +88,57 @@
         </div>
   
   </header>
+
+
+<!-- Demo section 1 -->
+<section class="py-5 d-flex align-items-center" id="one">
+  <div class="container py-5">
+      <div class="row text-center">
+          <div class="col-lg-9 mx-auto">
+              <h2 class="h1 mb-4">Demo section 1</h2>
+              <p class="font-italic mb-4 text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <!-- Scroll to top -->
+              <a class="btn btn-outline-light px-4 rounded-0 scroll-top" href="organic-farming.html">Organic Farming</a>
+          </div>
+      </div>
+  </div>
+</section>
+
+<div class="container py-5">
+
+          <div class="mb-4">
+              <!-- Solid divider -->
+              <hr class="solid">
+          </div>
+      </div>
+
+
+<div class="container-fluid">
+  <div class="row no-gutter">
+      <!-- The image half -->
+      <div class="col-md-6 d-none d-md-flex bg-image"></div>
+
+
+      <!-- The content half -->
+      <div class="col-md-6 bg-light">
+          <div class="login d-flex align-items-center py-5">
+              <!-- Demo content-->
+              <div class="container">
+                  <div class="row">
+                      <div class="col-lg-10 col-xl-7 mx-auto">
+                          <h3 class="display-4">Split page!</h3>
+                          <p class="text-muted mb-4">Create a login split page using Bootstrap 4.</p>
+                          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, pariatur accusantium voluptas natus aliquid unde, possimus distinctio, tempora culpa repellendus dolores amet aperiam minima officia quia dicta voluptate beatae ratione.</p>
+                      </div>
+                  </div>
+              </div><!-- End -->
+
+          </div>
+      </div><!-- End -->
+
+  </div>
+</div>
+
     <div class="bgimg-1">
       <div class="caption">
       <span class="border">SCROLL DOWN</span>
@@ -114,49 +166,20 @@
       <div class="caption">
       <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">SCROLL UP</span>
       </div>
-      <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6 offset-sm-6 p-5">
-                    <h3>Contact Us</h2>
-                    <p class="small">
-                        Vestibulum venernatis id ex eu dapibus. Suspendisse sit amet justa leo. Curabitur ornare tacus erat, ac interdum liguta consequat ut. Fusce id tellus ac ante feugiat porta.
-                    </p>
-                    <div class="row text-success my-3">
-                        <div class="col">
-                            <i class="fa fa-phone fa-fw"></i> +1234567890
-                        </div>
-                        <div class="col">
-                            <i class="fa fa-email fa-fw"></i> ABC@ABC.COM
-                        </div>
-                    </div>
-                    <form>
-                        <div class="form-row">
-                            <div class="form-group col-sm-6">
-                                <input type="text" class="form-control" placeholder="First Name" />
-                            </div>
-                            <div class="form-group col-sm-6">
-                                <input type="text" class="form-control" placeholder="Last Name" />
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group col-sm-6">
-                                <input type="text" class="form-control" placeholder="Email" />
-                            </div>
-                            <div class="form-group col-sm-6">
-                                <input type="text" class="form-control" placeholder="Cell" />
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <textarea class="form-control" rows="5" placeholder="Message"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-success">Send</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
-    </div>
+      
+<h2>Responsive Two Column Layout</h2>
+<p>Resize the browser window to see the responsive effect (the columns will stack on top of each other instead of floating next to each other, when the screen is less than 600px wide).</p>
+
+<div class="row">
+  <div class="column" style="background-color:#aaa;">
+    <img src="images/DSC_0734.jpeg">
+  </div>
+  <div class="column" style="background-color:#bbb;">
+    <h2>Column 2</h2>
+    <p>Some text..</p>
+  </div>
+</div>
+</div>
     
     <div style="position:relative;">
       <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
@@ -168,6 +191,20 @@
       <div class="caption">
       <span class="border">COOL!</span>
       </div>
+      <div class="card" style="max-width: 500px;">
+        <div class="row g-0">
+            <div class="col-sm-5">
+                <img src="images/DSC_0734.jpeg" class="card-img-top h-100" alt="...">
+            </div>
+            <div class="col-sm-7">
+                <div class="card-body">
+                    <h5 class="card-title">Alice Liddel</h5>
+                    <p class="card-text">Alice is a freelance web designer and developer based in London. She is specialized in HTML5, CSS3, JavaScript, Bootstrap, etc.</p>
+                    <a href="#" class="btn btn-primary stretched-link">View Profile</a>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
   
 <script>
@@ -185,5 +222,7 @@
     }
     </script>
     <script src="js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
