--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <link rel="stylesheet" href="css/style.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
 <style>
   body, html {
     height: 100%;
@@ -97,6 +99,91 @@
           </div>
       </div>
 
+
+<!-- Demo section 1 -->
+<section class="py-5 d-flex align-items-center" id="one">
+  <div class="container py-5">
+      <div class="row text-center">
+          <div class="col-lg-9 mx-auto">
+              <h2 class="h1 mb-4">Demo section 1</h2>
+              <p class="font-italic mb-4 text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <!-- Scroll to top -->
+              <a class="btn btn-outline-light px-4 rounded-0 scroll-top" href="conservation.html">Organic Farming</a>
+          </div>
+      </div>
+  </div>
+</section>
+
+<div class="container py-5">
+
+  <div class="mb-4">
+      <!-- Solid divider -->
+      <hr class="solid">
+  </div>
+</div>
+
+
+<div class="container-fluid">
+<div class="row no-gutter">
+  <!-- The content half -->
+<div class="col-md-6 bg-light">
+  <div class="login d-flex align-items-center py-5">
+      <!-- Demo content-->
+      
+              <div class="col-lg-10 col-xl-7 mx-auto">
+                  <h3 class="display-4">Split page!</h3>
+                  <p class="text-muted mb-4">Create a login split page using Bootstrap 4.</p>
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, pariatur accusantium voluptas natus aliquid unde, possimus distinctio, tempora culpa repellendus dolores amet aperiam minima officia quia dicta voluptate beatae ratione.</p>
+              </div>
+          </div>
+      </div><!-- End -->
+<!-- The image half -->
+<div class="container">
+  <div class="row">
+<div class="col-md-6 d-none d-md-flex bg-image2"></div>
+
+
+
+
+  </div>
+</div><!-- End -->
+
+</div>
+</div>
+<div class="container py-5">
+
+          <div class="mb-4">
+              <!-- Solid divider -->
+              <hr class="solid">
+          </div>
+      </div>
+
+
+<div class="container-fluid">
+  <div class="row no-gutter">
+      <!-- The image half -->
+      <div class="col-md-6 d-none d-md-flex bg-image"></div>
+
+
+      <!-- The content half -->
+      <div class="col-md-6 bg-light">
+          <div class="login d-flex align-items-center py-5">
+              <!-- Demo content-->
+              <div class="container">
+                  <div class="row">
+                      <div class="col-lg-10 col-xl-7 mx-auto">
+                          <h3 class="display-4">Split page!</h3>
+                          <p class="text-muted mb-4">Create a login split page using Bootstrap 4.</p>
+                          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, pariatur accusantium voluptas natus aliquid unde, possimus distinctio, tempora culpa repellendus dolores amet aperiam minima officia quia dicta voluptate beatae ratione.</p>
+                      </div>
+                  </div>
+              </div><!-- End -->
+
+          </div>
+      </div><!-- End -->
+
+  </div>
+</div>
       <header>
         <video autoplay muted loop id="myVideo">
         <source src="video/cows.mp4" type="video/mp4">
@@ -132,6 +219,31 @@
   </div>
 </div>
 
+
+<div class="container-fluid">
+  <div class="row no-gutter">
+      <!-- The image half -->
+      <div class="login d-flex align-items-center py-5"></div>
+
+
+      <!-- The content half -->
+      <div class="col-md-6 bg-light">
+          <div class="col-md-6 d-none d-md-flex bg-image">
+              <!-- Demo content-->
+              <div class="container">
+                  <div class="row">
+                      <div class="col-lg-10 col-xl-7 mx-auto">
+                          <h3 class="display-4">Split page!</h3>
+                          <p class="text-muted mb-4">Create a login split page using Bootstrap 4.</p>
+                          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, pariatur accusantium voluptas natus aliquid unde, possimus distinctio, tempora culpa repellendus dolores amet aperiam minima officia quia dicta voluptate beatae ratione.</p>
+                      </div>
+                  </div>
+              </div><!-- End -->
+
+          </div>
+      </div><!-- End -->
+  </div>
+</div>
     <div class="bgimg-1">
       <div class="caption">
       <span class="border">SCROLL DOWN</span>
@@ -184,19 +296,41 @@
       <div class="caption">
       <span class="border">COOL!</span>
       </div>
-      <div class="card" style="max-width: 500px;">
-        <div class="row g-0">
-            <div class="col-sm-5">
-                <img src="images/DSC_0734.jpeg" class="card-img-top h-100" alt="...">
-            </div>
-            <div class="col-sm-7">
-                <div class="card-body">
-                    <h5 class="card-title">Alice Liddel</h5>
-                    <p class="card-text">Alice is a freelance web designer and developer based in London. She is specialized in HTML5, CSS3, JavaScript, Bootstrap, etc.</p>
-                    <a href="#" class="btn btn-primary stretched-link">View Profile</a>
-                </div>
-            </div>
-        </div>
+      
+<div class="container py-5">
+
+  <div class="mb-4">
+      <!-- Solid divider -->
+      <hr class="solid">
+  </div>
+</div>
+
+
+<div class="container-fluid">
+<div class="row no-gutter">
+<!-- The image half -->
+<div class="col-md-6 d-none d-md-flex bg-image"></div>
+
+
+<!-- The content half -->
+<div class="col-md-6 bg-light">
+  <div class="login d-flex align-items-center py-5">
+      <!-- Demo content-->
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-10 col-xl-7 mx-auto">
+                  <h3 class="display-4">Split page!</h3>
+                  <p class="text-muted mb-4">Create a login split page using Bootstrap 4.</p>
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, pariatur accusantium voluptas natus aliquid unde, possimus distinctio, tempora culpa repellendus dolores amet aperiam minima officia quia dicta voluptate beatae ratione.</p>
+              </div>
+          </div>
+      </div><!-- End -->
+
+  </div>
+</div><!-- End -->
+
+</div>
+</div>
     </div>
     </div>
   
