--- a/index.html
+++ b/index.html
@@ -126,28 +126,9 @@
 <div class="container-fluid">
 <div class="row no-gutter">
   <!-- The content half -->
-<div class="col-md-6 bg-light">
-  <div class="login d-flex align-items-center py-5">
-      <!-- Demo content-->
-      
-              <div class="col-lg-10 col-xl-7 mx-auto">
-                  <h3 class="display-4">Split page!</h3>
-                  <p class="text-muted mb-4">Create a login split page using Bootstrap 4.</p>
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, pariatur accusantium voluptas natus aliquid unde, possimus distinctio, tempora culpa repellendus dolores amet aperiam minima officia quia dicta voluptate beatae ratione.</p>
-              </div>
-          </div>
-      </div><!-- End -->
-<!-- The image half -->
-<div class="container">
-  <div class="row">
-<div class="col-md-6 d-none d-md-flex bg-image2"></div>
-
-
-
-
-  </div>
-</div><!-- End -->
-
+<div class="col-md-12 bg-image">
+  
+</div>
 </div>
 </div>
 <div class="container py-5">
