uploaded an extra video and made that background

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 </div>
       <header>
         <video autoplay muted loop id="myVideo">
-        <source src="video/cows.mp4" type="video/mp4">
+        <source src="video/DSC_1363.mp4" type="video/mp4">
         </video>
       
         
