--- a/conservation.html
+++ b/conservation.html
@@ -48,6 +48,36 @@
 
 
 <div class="container-fluid">
+    <div class="row row-full">
+      <div class="col-sm-6">
+    <div class="login">
+        <!-- Demo content-->
+        
+                <div class="col-lg-10 col-xl-7 mx-auto">
+                    <h3 class="display-4">Split page!</h3>
+                    <p class="text-muted mb-4">Create a login split page using Bootstrap 4.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, pariatur accusantium voluptas natus aliquid unde, possimus distinctio, tempora culpa repellendus dolores amet aperiam minima officia quia dicta voluptate beatae ratione.</p>
+                </div>
+            </div>
+        </div><!-- End -->
+        <div class="col-sm-6">
+            <div class="rightside">
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
+
+
+  <div class="container py-5">
+
+    <div class="mb-4">
+        <!-- Solid divider -->
+        <hr class="solid">
+    </div>
+</div>
+
+<div class="container-fluid">
     <div class="row no-gutter">
         <!-- The image half -->
         <div class="col-md-6 d-none d-md-flex bg-image"></div>
@@ -73,11 +103,14 @@
     </div>
   </div>
 
-  <div class="mb-4">
-    <!-- Solid divider -->
-    <hr class="solid">
+  <div class="container py-5">
+
+    <div class="mb-4">
+        <!-- Solid divider -->
+        <hr class="solid">
+    </div>
 </div>
-</div>
+
 
 
 <div class="container-fluid">
@@ -108,6 +141,16 @@
 </div>
 </div>
 
+<div class="container py-5">
+
+    <div class="mb-4">
+        <!-- Solid divider -->
+        <hr class="solid">
+    </div>
+</div>
+
+
+
 <div class="container-fluid">
     <div class="row row-full">
       <div class="col-sm-6">
@@ -124,6 +167,16 @@
       </div>
     </div>
   </div>
+
+  <div class="container py-5">
+
+    <div class="mb-4">
+        <!-- Solid divider -->
+        <hr class="solid">
+    </div>
+</div>
+
+
 
   <div class="container-fluid">
     <div class="row row-full">
