--- a/farming.html
+++ b/farming.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">    
 <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/conservation.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
@@ -59,15 +60,12 @@ section .overlay {
 
   .row {
     width: 100%;
-    max-width: 940px;
-    margin: 0 auto;
+    max-width: 100%;
+    margin: 0;
     position: relative;
-    padding: 0 2%;
+    padding: 0;
   }
   
-  * {
-    box-sizing: border-box;
-  }
   
   body {
     color: #8f8f8f;
@@ -93,10 +91,7 @@ section .overlay {
     font-size: 17px;
     line-height: 2;
   }
-  
-  .content {
-    padding: 50px 2% 250px;
-  }
+
   
 </style>
 </head>
@@ -120,6 +115,84 @@ section .overlay {
       </div>
     </div>
 </section>
+
+
+<div class="container-fluid">
+  <div class="row no-gutter">
+      <!-- The image half -->
+      <div class="col-md-6 d-none d-md-flex bg-image"></div>
+
+
+      <!-- The content half -->
+      <div class="col-md-6 bg-light">
+          <div class="login d-flex align-items-center py-5">
+              <!-- Demo content-->
+              <div class="container">
+                  <div class="row">
+                      <div class="col-lg-10 col-xl-7 mx-auto">
+                          <h3 class="display-4">Split page!</h3>
+                          <p class="text-muted mb-4">Create a login split page using Bootstrap 4.</p>
+                          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, pariatur accusantium voluptas natus aliquid unde, possimus distinctio, tempora culpa repellendus dolores amet aperiam minima officia quia dicta voluptate beatae ratione.</p>
+                      </div>
+                  </div>
+              </div><!-- End -->
+
+          </div>
+      </div><!-- End -->
+
+  </div>
+</div>
+
+<div class="container-fluid">
+    <div class="row no-gutter">
+        <!-- The image half -->
+        <div class="col-md-6 d-none d-md-flex bg-image"></div>
+
+
+        <!-- The content half -->
+        <div class="col-md-6 bg-light">
+            <div class="login d-flex align-items-center py-5">
+                <!-- Demo content-->
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-10 col-xl-7 mx-auto">
+                            <h3 class="display-4">Split page!</h3>
+                            <p class="text-muted mb-4">Create a login split page using Bootstrap 4.</p>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, pariatur accusantium voluptas natus aliquid unde, possimus distinctio, tempora culpa repellendus dolores amet aperiam minima officia quia dicta voluptate beatae ratione.</p>
+                        </div>
+                    </div>
+                </div><!-- End -->
+
+            </div>
+        </div><!-- End -->
+
+    </div>
+</div>
+
+
+
+<div class="container-fluid">
+    <div class="row row-full">
+      <div class="col-sm-6">
+    <div class="login">
+        <!-- Demo content-->
+        
+                <div class="col-lg-10 col-xl-7 mx-auto">
+                    <h3 class="display-4">Split page!</h3>
+                    <p class="text-muted mb-4">Create a login split page using Bootstrap 4.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, pariatur accusantium voluptas natus aliquid unde, possimus distinctio, tempora culpa repellendus dolores amet aperiam minima officia quia dicta voluptate beatae ratione.</p>
+                </div>
+            </div>
+        </div><!-- End -->
+        <div class="col-sm-6">
+            <div class="rightside">
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
+
+
 
   <!-- Page section example for content below the video header -->
   <div class="my-5">
