added a basic transitioning slideshow

--- a/index.html
+++ b/index.html
@@ -76,6 +76,21 @@
     
     <div class="banner">banner</div>
 
+    <div id=slideset6>
+      <div>
+        <h1>This is slide 1</h1>
+        <p>Slide 1
+        <p>It has a <a href="./">link.</a>
+      </div>
+      <div>
+        <h1>This is the second slide</h1>
+        <p>Second slide
+      </div>
+      <div>
+        <h1>This is slide number 3</h1>
+        <p>Slide number 3
+      </div>
+    </div>
 
 <!-- Demo section 1 -->
 <section class="py-5 d-flex align-items-center" id="one">
