--- a/index.html
+++ b/index.html
@@ -76,21 +76,21 @@
     
     <div class="banner">banner</div>
 
-    <div id=slideset6>
-      <div>
+    <section id=slideset6>
+      <div class="image1">
         <h1>This is slide 1</h1>
         <p>Slide 1
         <p>It has a <a href="./">link.</a>
       </div>
-      <div>
+      <div class="image2">
         <h1>This is the second slide</h1>
         <p>Second slide
       </div>
-      <div>
+      <div class="image3">
         <h1>This is slide number 3</h1>
         <p>Slide number 3
       </div>
-    </div>
+    </section>
 
 <!-- Demo section 1 -->
 <section class="py-5 d-flex align-items-center" id="one">
@@ -124,6 +124,8 @@
               <p class="font-italic mb-4 text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               <!-- Scroll to top -->
               <a class="btn btn-outline-light px-4 rounded-0 scroll-top" href="conservation.html">Organic Farming</a>
+              <a class="btn btn-outline-light px-4 rounded-0 scroll-top" href="biodiversity.html">Biodiversity</a>
+
           </div>
       </div>
   </div>
